Style lists page and fix delete icon style spill

--- a/src/components/ListItem/ListItem.scss
+++ b/src/components/ListItem/ListItem.scss
@@ -5,9 +5,11 @@
   align-items: center;
   background-color: $fullist-lilac;
   margin: 1.2rem 0.8rem;
-  padding: 1.2rem;
+  padding: 0.8rem 1.2rem;
   padding-left: 0.8rem;
+  // border-bottom: 1px solid $fullist-black;
   border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 
   &--checked {
     background-color: #d1ccdc80;
@@ -32,6 +34,7 @@
     -o-transform: scale(1.5);
     transform: scale(1.5);
     margin-left: 0.8rem;
+    cursor: pointer;
   }
 
   &__name {
