--- a/src/components/VariableDelete/VariableDelete.scss
+++ b/src/components/VariableDelete/VariableDelete.scss
@@ -1,15 +1,17 @@
 @use "../../partials/variables" as *;
 
-svg {
-  fill: $fullist-black;
-  z-index: 1;
-  margin-right: 0.4rem;
+.delete {
+  &__svg {
+    fill: $fullist-black;
+    z-index: 1;
+    margin-right: 0.4rem;
 
-  &:hover {
-    fill: $fullist-red;
+    &:hover {
+      fill: $fullist-red;
+    }
   }
-}
 
-path {
-  pointer-events: none;
+  &__path {
+    pointer-events: none;
+  }
 }
