--- a/src/pages/List/List.scss
+++ b/src/pages/List/List.scss
@@ -20,7 +20,7 @@
   }
 
   &__add-item {
-    margin-left: 2rem;
+    margin: 1.6rem 0 0 2rem;
   }
 
   &__check-nearby {
